--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Social Photos v2
+
+This is a clone of the Social Photos Project that is live at http://socialphotos.net. Feel free to send PRs to add features/fix bugs/etc and i'll be more than happy to take a look. Please go through the file "TODO" to see a list of unimplemented ideas that can be implemented.
+
+Link to list of reported issues: https://code.google.com/p/social-photos/issues/list
+
+Feel free to fork and use it as you please. I'd appreciate a link back but it's not mandatory.
