--- a/README
+++ b/README
@@ -5,3 +5,10 @@ This is a clone of the Social Photos Project that is live at http://socialphotos
 Link to list of reported issues: https://code.google.com/p/social-photos/issues/list
 
 Feel free to fork and use it as you please. I'd appreciate a link back but it's not mandatory.
+
+
+NOTE:
+  
+All the code in this project is under Creative Commons Public Domain License: http://creativecommons.org/publicdomain/zero/1.0/
+
+Anyone who is submitting Pull Requests to be merged into this project should be willing to publish their code under the same license too.
